--- a/portal/font-awesome2.css
+++ b/portal/font-awesome2.css
@@ -3,10 +3,16 @@
  * -------------------------- */
  
  @font-face {
-  font-family: 'FontAwesome';
+    font-family: 'FontAwesome';
   src: url('fontawesome-webfont.eot?v=4.3.0'); /* IE9 Compat Modes */
+  src: url('fontawesome-webfont.eot?#iefix&v=4.3.0') /* IE6-IE8 */ format('embedded-opentype'),
+       url('fontawesome-webfont.woff2?v=4.3.0') format('woff2'),
+       url('fontawesome-webfont.woff?v=4.3.0') format('woff') /* Modern Browsers */,
+       url('fontawesome-webfont.ttf?v=4.3.0') format('truetype') /* Android */,
+       url('fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: fallback; 
 }
 
 body .fa:after {
